BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Product_Metrics_vod__c.object
<CustomObject>
    <fields>
        <fullName>Segmentation_1_BMS_CA__c</fullName>
        <label>Segmentation 1</label>
        <picklist>
            <picklistValues>
                <fullName>D1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HGP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Segmentation_2_BMS_CA__c</fullName>
        <label>Segmentation 2</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Segmentation_3_BMS_CA__c</fullName>
        <label>Segmentation 3</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Selling_Stage__c</fullName>
        <description>Sample metric field.</description>
        <label>Selling Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pull Through</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Speaker_Skills__c</fullName>
        <description>Sample metric field.</description>
        <label>Speaker Skills</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Novice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Rating_BMS_CA__c</fullName>
        <description>Stores System Rating at Account / Product level</description>
        <label>System Rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRx_Chg_Y_Y_BMS__c</fullName>
        <label>TRx % Chg Y/Y</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TRx_MQT0_BMS_CA__c</fullName>
        <label>TRx MQT0</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRx_MQT_1_BMS_CA__c</fullName>
        <label>TRx MQT-1</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRx_MQT_2_BMS_CA__c</fullName>
        <label>TRx MQT-2</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_BMS_EMEA__c</fullName>
        <label>Target</label>
        <picklist>
            <picklistValues>
                <fullName>Not Targeted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_BMS__c</fullName>
        <label>Target</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tier_Access_BMS_EMEA__c</fullName>
        <label>Tier (Access)</label>
        <picklist>
            <picklistValues>
                <fullName>No Tier</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tier_BMS_EMEA__c</fullName>
        <label>Tier (Sales)</label>
        <picklist>
            <picklistValues>
                <fullName>No Tier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tier_KCM_BMS_EMEA__c</fullName>
        <description>BMS ACN - December 2015 (Q4 GRM) - Field to store the Tier values for KCM users in UKI.</description>
        <label>Tier (KCM)</label>
        <picklist>
            <picklistValues>
                <fullName>No Tier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tier_Organization_BMS_EMEA__c</fullName>
        <description>VPRO April 2014: Sales specific Metric.
BMS ACN : May 2015 - Since Tier_BMS_EMEA__c will be used for displaying both the Tier (Sales) for Individuals and Organizations, we will no longer require this field.</description>
        <label>ZDELETE_Tier (Sales)</label>
        <picklist>
            <picklistValues>
                <fullName>No Tier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tier_Rating_BMS_US__c</fullName>
        <description>VPRO - April 2013 - BMS Global Requirements &amp; Design: Brand based tiering for CV sampling users</description>
        <label>Tier Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tier_TA_BMS_EMEA_del__c</fullName>
        <label>Tier TA</label>
        <picklist>
            <picklistValues>
                <fullName>Low No Tier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Units_BMS__c</fullName>
        <label>Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X12_mo_trx_chg__c</fullName>
        <description>Sample metric field.</description>
        <label>12 mo TRx Chg</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Product Metrics</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account_vod__c</columns>
        <columns>Products_vod__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>M-{0000000000}</displayFormat>
        <label>Product Metrics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Metrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>